# G4_Boundary_Artifact_Analysis

./: CMakeLists.txt  README.md  main.cc  run.mac
analysis/: plot_artifact.py
include/: ActionInitialization.hh  DetectorConstruction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
